--- a/css/style.css
+++ b/css/style.css
@@ -122,13 +122,18 @@ section{
   margin: auto;
   display: block;
   font-size: 16px;
-  line-height: 28px;
+  line-height: 20px;
   text-align: center;
   position: absolute;
   color: white;
+  display: flex;
+  flex-direction: column-reverse;
+}
+.groups:nth-last-of-type(-n+3){
+  flex-direction: column;
 }
 .groups b{
-  display: none;
+  /* display: none; */
 }
 #groupA{
 right: 30%;
