--- a/css/style.css
+++ b/css/style.css
@@ -16,31 +16,40 @@ body {
     background-size: 100% 100%;
     background-position: center; */
   position: relative;
-
   font-family: sans-serif;
-  min-width: 567px;
+  min-width: 767px;
+  background: linear-gradient(231deg, #d7c7a4, #c0b3b1);
+  background-position: center;
+  background-size: 99%;
 }
-h2{
+
+h2 {
   text-align: center;
   font-size: 24px;
   line-height: 28px;
   padding: 20px 0;
 }
-section{
-  display: flex;
-  align-items: center;
-  flex-direction: row;
+
+section {
+  /* display: flex; */
+  /* align-items: center; */
+  /* flex-direction: row; */
+  overflow: hidden;
+  min-width: 767px;
 }
+
 .tire {
   margin: auto;
   display: block;
   position: relative;
   width: fit-content;
+  /* background-image: linear-gradient(to bottom right, red, yellow); */
+  padding: 140px;
 }
 
 .tire img {
   /* height: 100vh; */
-  max-width: 600px;
+  width: calc(100% - 0px);
 }
 
 .inputs {
@@ -50,67 +59,192 @@ section{
   border: 0px solid orange;
   border-radius: 2px;
   position: absolute;
+  z-index: 1;
+  transform-origin: center;
 }
 
 .inputs label {
   width: auto;
   display: block;
   text-align: center;
+  font-size: 18px;
 }
 
 .inputs input {
+  font-size: 18px;
   text-align: center;
   width: 100%;
   border: none;
   border-bottom: 1px solid black;
 }
 
+.reset {
+  border: 0;
+  background: transparent;
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  width: 30px;
+}
+
+.reset img {
+  width: 100%;
+}
+
 #p1 {
-  left: 39%;
-  top: 3%;
+  left: 50%;
+  top: 6.5%;
+  transform: translateX(-50%);
 }
 
 #p2 {
-  left: 7%;
-  top: 15%;
+  left: 17.8%;
+  top: 21.3%;
+  transform: translate(-50%,-50%);
 }
 
 #p3 {
-  left: 1%;
-  top: 41%;
+  left: 0%;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 #p4 {
-  left: 7%;
-  top: 67%;
+    left: 17.8%;
+    bottom: 21.3%;
+    transform: translate(-50%,+50%);
 }
 
 #p5 {
-  left: 39%;
-  top: 77%;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 7.5%;
 }
 
 #p6 {
-  right: 7%;
-  top: 67%;
+    right: 17.8%;
+    bottom: 21.3%;
+    transform: translate(+50%,+50%);
 }
 
 #p7 {
-  right: 1%;
-  top: 41%;
+  right: 0%;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 #p8 {
-  right: 7%;
-  top: 15%;
+  right: 17.8%;
+  top: 21.3%;
+  transform: translate(+50%,-50%);
 }
 
+.lines {
+  width: 2px;
+  height: 60px;
+  background: red;
+  position: absolute;
+  z-index: 0;
+  height: 93px;
+}
+.lines::after{
+  content: "";
+  display: block;
+  width: 7px;
+  height: 7px;
+  background: red;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50%;
+}
+#line1 {
+  left: 50%;
+  top: 11%;
+  transform: translateX(-50%);
+}
+
+#line1::after {
+
+}
+#line2 {
+  left: 26.5%;
+  top: 26.5%;
+  transform: translate(-50%,-50%) rotate(-45deg);
+}
+
+#line2::after {
+
+}
+#line3 {
+  left: 16.5%;
+  top: 50%;
+  transform: translateY(-50%) rotate(-90deg);
+}
+
+#line3::after {
+
+}
+#line4 {
+  left: 26.5%;
+  bottom: 26.5%;
+  transform: translate(-50%,+50%) rotate(-135deg);
+}
+
+#line4::after {
+
+}
+#line5 {
+  left: 50%;
+  bottom: 11%;
+  transform: translateX(-50%) rotate(180deg);
+}
+
+#line5::after {
+
+}
+#line6 {
+  right: 26.0%;
+  bottom: 26.0%;
+  transform: translate(+50%,+50%) rotate(+135deg);
+}
+
+#line6::after {
+
+}
+#line7 {
+  right: 16%;
+  top: 50%;
+  transform: translateY(-50%) rotate(90deg);
+}
+
+#line7::after {
+
+}
+#line8 {
+  right: 26.0%;
+  top: 26.0%;
+  transform: translate(+50%,-50%) rotate(45deg);
+}
+
+#line8::after {
+
+}
 .output {
   /* width: 100%; */
-  display: none;
+  display: block;
   align-items: center;
   justify-content: center;
   flex-grow: 1;
+  position: absolute;
+  width: 185px;
+  height: 151px;
+  /* background: red; */
+  padding: 20px;
+  position: absolute;
+  right: -3%;
+  bottom: 29%;
 }
 
 .output>div {
@@ -118,50 +252,59 @@ section{
 }
 
 .groups {
-  max-width: 200px;
-  margin: auto;
+  /* max-width: 200px; */
+  /* margin: auto; */
   display: block;
-  font-size: 16px;
-  line-height: 20px;
-  text-align: center;
-  position: absolute;
-  color: white;
-  display: flex;
-  flex-direction: column-reverse;
+  font-size: 18px;
+  line-height: 26px;
+  text-align: left;
+  /* position: absolute; */
+  /* color: white; */
+  /* display: flex; */
+  /* flex-direction: column-reverse; */
 }
-.groups:nth-last-of-type(-n+3){
+
+.groups:nth-last-of-type(-n+3) {
   flex-direction: column;
 }
-.groups b{
+
+.groups b {
   /* display: none; */
 }
-#groupA{
-right: 30%;
-top: 25%;
+
+/* #groupA {
+  right: 30%;
+  top: 25%;
 }
-#groupB{
+
+#groupB {
   left: 50%;
   top: 15%;
   transform: translateX(-50%);
 }
-#groupC{
-left: 30%;
-top: 25%;
+
+#groupC {
+  left: 30%;
+  top: 25%;
 }
-#groupD{
-left: 30%;
-bottom: 33%;
+
+#groupD {
+  left: 30%;
+  bottom: 33%;
 }
-#groupE{
-left: 50%;
-bottom: 25%;
-transform: translateX(-50%);
+
+#groupE {
+  left: 50%;
+  bottom: 25%;
+  transform: translateX(-50%);
 }
-#groupF{
-right: 30%;
-bottom: 33%;
-}
-@media screen and (max-width: 767px) {
+
+#groupF {
+  right: 30%;
+  bottom: 33%;
+} */
+
+/* @media screen and (max-width: 767px) {
   section {
     flex-direction: column;
   }
@@ -173,5 +316,19 @@ bottom: 33%;
 
   .output {
     padding: 20px 0;
+  }
+} */
+@media screen and (max-width: 1050px){
+  section{
+    padding:50px;
+  }
+}
+@media screen and (max-width: 876px){
+  .output{
+    right: 10%;
+    bottom: -100px;
+  }
+  section{
+    padding-bottom: 150px;
   }
 }
