--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-* {
+bor {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -21,35 +21,36 @@ body {
 
 h2 {
   position: absolute;
-  right: 0;
-
-  text-align: center;
-  font-size: 24px;
+  right: 0%;
+  top: 18%;
+  transform: translateX(70%);
+  text-align: left;
+  font-size: 22px;
   line-height: 28px;
   padding: 20px 20px;
 }
 
 section {
   overflow: hidden;
+  padding-right: 80px;
 }
 
 .tire {
-  margin:  auto;
+  margin: auto;
   display: block;
   position: relative;
   width: fit-content;
   padding: 140px;
 }
 
-
-.landscapeScreen #engine-img{
-
-height: calc(100vh - 280px);
+.landscapeScreen #engine-img {
+  height: calc(100vh - 280px);
 }
-.portraitScreen #engine-img{
 
-width: calc(100vw - 280px);
+.portraitScreen #engine-img {
+  width: calc(100vw - 280px);
 }
+
 .inputs {
   background-color: white;
   padding: 7px;
@@ -80,8 +81,8 @@ width: calc(100vw - 280px);
   border: 0;
   background: transparent;
   position: absolute;
-  left: 75px;
-  top: 75px;
+  left: 25px;
+  top: 92px;
   width: 30px;
 }
 
@@ -92,49 +93,49 @@ width: calc(100vw - 280px);
 #p1 {
   left: 50%;
   top: 18.5%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
 #p2 {
   left: 22%;
   top: 25.2%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
 #p3 {
   left: 14%;
   top: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
 #p4 {
-    left: 22.0%;
-    bottom: 25.2%;
-    transform: translate(-50%,+50%);
+  left: 22.0%;
+  bottom: 25.2%;
+  transform: translate(-50%, +50%);
 }
 
 #p5 {
   left: 50%;
   bottom: 17.5%;
-  transform: translate(-50%,50%);
+  transform: translate(-50%, 50%);
 }
 
 #p6 {
-    right: 22.0%;
-    bottom: 25.2%;
-    transform: translate(+50%,+50%);
+  right: 22.0%;
+  bottom: 25.2%;
+  transform: translate(+50%, +50%);
 }
 
 #p7 {
   right: 14%;
   top: 50%;
-  transform: translate(+50%,-50%);
+  transform: translate(+50%, -50%);
 }
 
 #p8 {
   right: 22.0%;
   top: 25.2%;
-  transform: translate(+50%,-50%);
+  transform: translate(+50%, -50%);
 }
 
 .lines {
@@ -146,7 +147,8 @@ width: calc(100vw - 280px);
   height: 100px;
   transform-origin: center;
 }
-.lines::after{
+
+.lines::after {
   content: "";
   display: block;
   width: 10px;
@@ -158,78 +160,71 @@ width: calc(100vw - 280px);
   transform: translateX(-50%);
   border-radius: 50%;
 }
+
 #line1 {
   left: 50%;
   top: 22%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
-#line1::after {
+#line1::after {}
 
-}
 #line2 {
   left: 30%;
   top: 30%;
-  transform: translate(-50%,-50%) rotate(-45deg);
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
 
-#line2::after {
+#line2::after {}
 
-}
 #line3 {
   left: 21.7%;
   top: 50%;
-  transform: translate(-50%,-50%) rotate(-90deg);
+  transform: translate(-50%, -50%) rotate(-90deg);
 }
 
-#line3::after {
+#line3::after {}
 
-}
 #line4 {
   left: 29.7%;
   bottom: 29.7%;
-  transform: translate(-50%,+50%) rotate(-135deg);
+  transform: translate(-50%, +50%) rotate(-135deg);
 }
 
-#line4::after {
+#line4::after {}
 
-}
 #line5 {
   left: 50%;
   bottom: 21%;
-  transform: translate(-50%,+50%) rotate(180deg);
+  transform: translate(-50%, +50%) rotate(180deg);
 }
 
-#line5::after {
+#line5::after {}
 
-}
 #line6 {
   right: 29.5%;
   bottom: 29.5%;
-  transform: translate(+50%,+50%) rotate(+135deg);
+  transform: translate(+50%, +50%) rotate(+135deg);
 }
 
-#line6::after {
+#line6::after {}
 
-}
 #line7 {
   right: 21%;
   top: 50%;
-  transform: translate(+50%,-50%) rotate(90deg);
+  transform: translate(+50%, -50%) rotate(90deg);
 }
 
-#line7::after {
+#line7::after {}
 
-}
 #line8 {
   right: 29.8%;
   top: 29.8%;
-  transform: translate(+50%,-50%) rotate(45deg);
+  transform: translate(+50%, -50%) rotate(45deg);
 }
 
-#line8::after {
+#line8::after {}
 
-}
 .output {
   /* width: 100%; */
   display: block;
@@ -241,8 +236,9 @@ width: calc(100vw - 280px);
   /* height: 151px; */
   padding: 20px;
   position: absolute;
-  right: 0;
-  bottom: 0;
+  right: 0%;
+  bottom: 5%;
+  transform: translateX(70%);
 }
 
 .output>div {
@@ -254,23 +250,24 @@ width: calc(100vw - 280px);
   font-size: 18px;
   line-height: 26px;
   text-align: left;
-
-}
-.output#out1{
-  left: 0;
 }
 
-.output#out2{
-  right: 0;
-}
-footer{
+.info-btn {
   position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-
-  font-size: 18px;
-  color: black;
-  line-height: 24px;
-  padding: 5px 0; 
+  left: 0;
+  top: 0;
+  left: 75px;
+  top: 85px;
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 2px solid rgba(255, 102, 0, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* padding: 10px; */
+}
+.info-btn img{
+  width: 18px;
 }
