--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ bor {
 body {
   position: relative;
   font-family: sans-serif;
-  background: linear-gradient(231deg, #d7c7a4, #c0b3b1);
+  background: linear-gradient(to top left, rgba(77,20,140,1), rgba(255,102,0,1));
   background-position: center;
   background-size: 99%;
   width: 100vw;
@@ -25,9 +25,10 @@ h2 {
   top: 18%;
   transform: translateX(70%);
   text-align: left;
-  font-size: 22px;
+  font-size: 20px;
   line-height: 28px;
-  padding: 20px 20px;
+  padding: 10px 15px;
+  background: white;
 }
 
 section {
@@ -70,6 +71,7 @@ section {
   font-size: 18px;
 }
 
+
 .inputs input {
   font-size: 18px;
   text-align: center;
@@ -77,6 +79,18 @@ section {
   border: none;
   border-bottom: 1px solid black;
   border-radius: 0;
+}
+/*
+Chrome, Safari, Edge, Opera */
+.inputs input::-webkit-outer-spin-button,
+.inputs input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.inputs input[type=number] {
+  -moz-appearance: textfield;
 }
 
 .reset {
@@ -238,11 +252,12 @@ section {
   position: absolute;
   width: 185px;
   /* height: 151px; */
-  padding: 20px;
+  padding: 10px 15px;
   position: absolute;
   right: 0%;
   bottom: 10%;
   transform: translateX(70%);
+  background: white;
 }
 
 .output>div {
@@ -264,15 +279,15 @@ section {
   right: 20px;
   top: 85px;
   display: block;
-  width: 30px;
-  height: 30px;
+  width: 29px;
+  height: 29px;
   border-radius: 50%;
-  border: 2px solid rgba(255, 102, 0, 1);
+  border: 3px solid white;
   display: flex;
   align-items: center;
   justify-content: center;
   /* padding: 10px; */
 }
 .info-btn img{
-  width: 18px;
+  width: 20px;
 }
