--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   position: relative;
   font-family: sans-serif;
   background: linear-gradient(-45deg, rgba(77,20,140,1), rgba(255,102,0,1));
-  background: linear-gradient(-45deg, rgba(77,20,140,1) 15%, rgba(255,102,0,1) 100%);
+  background: linear-gradient(-45deg, rgba(77,20,140,1) 25%, rgba(255,102,0,1) 100%);
   /* background-position: center; */
   /* background-size: cover; */
   width: 100vw;
@@ -35,7 +35,7 @@ h2 {
   padding: 10px 15px;
   background: white;
   border-radius: 5px;
-  border: 2px solid black;
+  border: 4px solid black;
   border-color: #f05f0c;
 }
 
@@ -46,7 +46,7 @@ section {
   /* height: 100vh; */
   width: fit-content;
   height: fit-content;
-  padding: 50px 300px 50px 120px;
+  padding: 50px 300px 50px 220px;
   margin: auto;
 }
 
@@ -60,7 +60,7 @@ section {
 }
 
 .landscapeScreen #engine-img {
-  height: calc(100vh - 150px);
+  height: calc(100vh - 170px);
 }
 
 .portraitScreen #engine-img {
@@ -77,7 +77,7 @@ section {
   z-index: 1;
   transform-origin: center;
   border-radius: 5px;
-  border: 2px solid black;
+  border: 4px solid black;
 }
 
 .inputs label {
@@ -283,7 +283,7 @@ Chrome, Safari, Edge, Opera */
   transform: translateX(70%);
   background: white;
   border-radius: 5px;
-  border: 2px solid black;
+  border: 4px solid black;
   border-color: #fb6402;
 }
 
@@ -318,7 +318,14 @@ Chrome, Safari, Edge, Opera */
 .info-btn img{
   width: 20px;
 }
-
+.logo{
+  position: absolute;
+  left: -31%;
+  top: 19%;
+  width: 200px;
+  background: white;
+  /* margin-top: -5px; */
+}
 
 @media (max-width: 1200px) {
   section {
@@ -326,6 +333,6 @@ Chrome, Safari, Edge, Opera */
   /* width: calc(100vw - 130px); */
 }
 .tire{
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 }
