--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ section {
   z-index: 1;
   transform-origin: center;
   border-radius: 5px;
-  border: 4px solid black;
+  border: 3px solid black;
 }
 
 .inputs label {
@@ -149,7 +149,7 @@ Chrome, Safari, Edge, Opera */
   left: 11%;
   bottom: 11%;
   transform: translate(-50%, +50%);
-  border-color: #8b305b;
+  border-color: #4d148c;
 }
 
 #p5 {
@@ -320,9 +320,9 @@ Chrome, Safari, Edge, Opera */
 }
 .logo{
   position: absolute;
-  left: -31%;
-  top: 19%;
-  width: 200px;
+  left: -21%;
+  top: 23%;
+  width: 138px;
   background: white;
   /* margin-top: -5px; */
 }
@@ -331,6 +331,8 @@ Chrome, Safari, Edge, Opera */
   section {
   /* padding-right: 130px; */
   /* width: calc(100vw - 130px); */
+  position: relative;
+  transform: translateY(-5%);
 }
 .tire{
   /* margin-top: 10px; */
