--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,24 @@
 bor {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
 }
 
-*:focus {
+:focus {
   outline: none;
 }
 
 body {
   position: relative;
   font-family: sans-serif;
-  background: linear-gradient(-45deg, rgba(77,20,140,1), rgba(255,102,0,1));
-  background: linear-gradient(-45deg, rgba(77,20,140,1) 25%, rgba(255,102,0,1) 100%);
-  /* background-position: center; */
-  /* background-size: cover; */
+  background: linear-gradient(-45deg, rgb(77, 20, 140) 25%, rgb(255, 102, 0) 100%);
   width: 100vw;
   height: 100vh;
-  overflow: hidden !important;
-  margin: 0 !important;
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden !important;
+  margin: 0px !important;
 }
 
 h2 {
@@ -35,15 +32,10 @@ h2 {
   padding: 10px 15px;
   background: white;
   border-radius: 5px;
-  border: 4px solid black;
-  border-color: #f05f0c;
+  border: 3px solid rgb(240, 95, 12);
 }
 
 section {
-  /* overflow: hidden !important; */
-  /* padding-right: 80px; */
-  /* width: calc(100vw - 80px); */
-  /* height: 100vh; */
   width: fit-content;
   height: fit-content;
   padding: 50px 300px 50px 220px;
@@ -55,8 +47,6 @@ section {
   display: block;
   position: relative;
   width: fit-content;
-  /* padding: 140px; */
-  /* margin-top: -10px; */
 }
 
 .landscapeScreen #engine-img {
@@ -71,11 +61,9 @@ section {
   background-color: white;
   padding: 7px;
   max-width: 127px;
-  border: 0px solid orange;
-  border-radius: 2px;
   position: absolute;
   z-index: 1;
-  transform-origin: center;
+  transform-origin: center center;
   border-radius: 5px;
   border: 3px solid black;
 }
@@ -87,37 +75,34 @@ section {
   font-size: 18px;
 }
 
-
 .inputs input {
   font-size: 18px;
   text-align: center;
   width: 115px;
-  border: none;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-image: initial;
   border-bottom: 1px solid black;
-  border-radius: 0;
-}
-/*
-Chrome, Safari, Edge, Opera */
-.inputs input::-webkit-outer-spin-button,
-.inputs input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+  border-radius: 0px;
 }
 
-/* Firefox */
-.inputs input[type=number] {
-  -moz-appearance: textfield;
+.inputs input::-webkit-outer-spin-button, .inputs input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0px;
 }
+
+.inputs input[type="number"] {}
 
 .reset {
-  border: 0;
+  border: 0px;
   background: transparent;
   position: absolute;
   right: -130px;
   top: 70px;
   width: 33px;
   height: 33px;
-  padding: 0;
+  padding: 0px;
 }
 
 .reset img {
@@ -128,66 +113,65 @@ Chrome, Safari, Edge, Opera */
   left: 50%;
   top: 0.5%;
   transform: translate(-50%, -50%);
-  border-color: #4d148c;
+  border-color: rgb(77, 20, 140);
 }
 
 #p2 {
   left: 11%;
   top: 11%;
   transform: translate(-50%, -50%);
-  border-color: #77276b;
+  border-color: rgb(119, 39, 107);
 }
 
 #p3 {
   left: -5%;
   top: 50%;
   transform: translate(-50%, -50%);
-  border-color: #6c2273;
+  border-color: rgb(108, 34, 115);
 }
 
 #p4 {
   left: 11%;
   bottom: 11%;
-  transform: translate(-50%, +50%);
-  border-color: #4d148c;
+  transform: translate(-50%, 50%);
+  border-color: rgb(77, 20, 140);
 }
 
 #p5 {
   left: 50%;
   bottom: 1.5%;
   transform: translate(-50%, 50%);
-  border-color: #b64439;
+  border-color: rgb(182, 68, 57);
 }
 
 #p6 {
   right: 11%;
   bottom: 11%;
-  transform: translate(+50%, +50%);
-  border-color: #d8541f;
+  transform: translate(50%, 50%);
+  border-color: rgb(216, 84, 31);
 }
 
 #p7 {
   right: -5%;
   top: 50%;
-  transform: translate(+50%, -50%);
-  border-color: #f66207;
+  transform: translate(50%, -50%);
+  border-color: rgb(246, 98, 7);
 }
 
 #p8 {
   right: 11%;
   top: 11%;
-  transform: translate(+50%, -50%);
-  border-color: #fd6502;
+  transform: translate(50%, -50%);
+  border-color: rgb(253, 101, 2);
 }
 
 .lines {
   width: 4px;
-  /* height: 60px; */
   background: red;
   position: absolute;
   z-index: 0;
   height: 100px;
-  transform-origin: center;
+  transform-origin: center center;
 }
 
 .lines::after {
@@ -197,7 +181,7 @@ Chrome, Safari, Edge, Opera */
   height: 10px;
   background: red;
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   left: 50%;
   transform: translateX(-50%);
   border-radius: 50%;
@@ -230,7 +214,7 @@ Chrome, Safari, Edge, Opera */
 #line4 {
   left: 20.2%;
   bottom: 20.2%;
-  transform: translate(-50%, +50%) rotate(-135deg);
+  transform: translate(-50%, 50%) rotate(-135deg);
 }
 
 #line4::after {}
@@ -238,7 +222,7 @@ Chrome, Safari, Edge, Opera */
 #line5 {
   left: 50%;
   bottom: 7.5%;
-  transform: translate(-50%, +50%) rotate(180deg);
+  transform: translate(-50%, 50%) rotate(180deg);
 }
 
 #line5::after {}
@@ -246,7 +230,7 @@ Chrome, Safari, Edge, Opera */
 #line6 {
   right: 19.5%;
   bottom: 19.5%;
-  transform: translate(+50%, +50%) rotate(+135deg);
+  transform: translate(50%, 50%) rotate(135deg);
 }
 
 #line6::after {}
@@ -254,7 +238,7 @@ Chrome, Safari, Edge, Opera */
 #line7 {
   right: 7%;
   top: 50%;
-  transform: translate(+50%, -50%) rotate(90deg);
+  transform: translate(50%, -50%) rotate(90deg);
 }
 
 #line7::after {}
@@ -262,20 +246,17 @@ Chrome, Safari, Edge, Opera */
 #line8 {
   right: 20.2%;
   top: 20.2%;
-  transform: translate(+50%, -50%) rotate(45deg);
+  transform: translate(50%, -50%) rotate(45deg);
 }
 
 #line8::after {}
 
 .output {
-  /* width: 100%; */
   display: block;
   align-items: center;
   justify-content: center;
   flex-grow: 1;
-  position: absolute;
   width: 185px;
-  /* height: 151px; */
   padding: 10px 15px;
   position: absolute;
   right: -18%;
@@ -283,8 +264,7 @@ Chrome, Safari, Edge, Opera */
   transform: translateX(70%);
   background: white;
   border-radius: 5px;
-  border: 4px solid black;
-  border-color: #fb6402;
+  border: 3px solid rgb(251, 100, 2);
 }
 
 .output>div {
@@ -296,16 +276,13 @@ Chrome, Safari, Edge, Opera */
   font-size: 18px;
   line-height: 30px;
   text-align: left;
-  margin: 0;
+  margin: 0px;
 }
 
 .info-btn {
   position: absolute;
-  /* left: 0; */
-  top: 0;
   right: -75px;
   top: 70px;
-  display: block;
   width: 27px;
   height: 27px;
   border-radius: 50%;
@@ -313,28 +290,25 @@ Chrome, Safari, Edge, Opera */
   display: flex;
   align-items: center;
   justify-content: center;
-  /* padding: 10px; */
 }
-.info-btn img{
+
+.info-btn img {
   width: 20px;
 }
-.logo{
+
+.logo {
   position: absolute;
-  left: -21%;
+  left: -17%;
   top: 23%;
-  width: 138px;
+  width: 122px;
   background: white;
-  /* margin-top: -5px; */
 }
 
 @media (max-width: 1200px) {
   section {
-  /* padding-right: 130px; */
-  /* width: calc(100vw - 130px); */
-  position: relative;
-  transform: translateY(-5%);
-}
-.tire{
-  /* margin-top: 10px; */
-}
+    position: relative;
+    transform: translateY(-5%);
+  }
+
+  .tire {}
 }
