--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 bor { margin: 0px; padding: 0px; box-sizing: border-box; }
 :focus { outline: none; }
 body { position: relative; font-family: sans-serif; background: linear-gradient(-45deg, rgb(77, 20, 140) 25%, rgb(255, 102, 0) 100%); width: 100vw; height: 100vh; display: flex; align-items: center; justify-content: center; overflow: hidden !important; margin: 0px !important; }
-h2 {position: absolute;right: -18%;top: 110px;transform: translateX(70%);text-align: left;font-size: 19px;line-height: 28px;padding: 10px 15px;background: white;border-radius: 5px;border: 3px solid rgb(240, 95, 12);}
+h2 {position: absolute;right: -18%;top: 50%;transform: translate(70%,calc(-0% - 170px));text-align: left;font-size: 19px;line-height: 28px;padding: 10px 15px;background: white;border-radius: 5px;border: 3px solid rgb(240, 95, 12);}
 section {width: fit-content;height: fit-content;padding: 50px 300px 50px 128px;margin: auto;}
 .tire { margin: auto; display: block; position: relative; width: fit-content; }
-.landscapeScreen #engine-img { height: calc(100vh - 170px); }
+.landscapeScreen #engine-img {height: calc(100vh - 190px);}
 .portraitScreen #engine-img { width: calc(100vw - 280px); }
 .inputs { background-color: white; padding: 7px; max-width: 127px; position: absolute; z-index: 1; transform-origin: center center; border-radius: 5px; border: 3px solid black; }
 .inputs label { width: auto; display: block; text-align: center; font-size: 18px; }
@@ -39,7 +39,7 @@ section {width: fit-content;height: fit-content;padding: 50px 300px 50px 128px;m
 #line7::after { }
 #line8 { right: 20.2%; top: 20.2%; transform: translate(50%, -50%) rotate(45deg); }
 #line8::after { }
-.output { display: block; align-items: center; justify-content: center; flex-grow: 1; width: 185px; padding: 10px 15px; position: absolute; right: -18%; bottom: 6%; transform: translateX(70%); background: white; border-radius: 5px; border: 3px solid rgb(251, 100, 2); }
+.output {display: block;align-items: center;justify-content: center;flex-grow: 1;width: 185px;padding: 10px 15px;position: absolute;right: -18%;top: 50%;transform: translate(70%,calc(-0% + 45px));background: white;border-radius: 5px;border: 3px solid rgb(251, 100, 2);}
 .output > div { width: 100%; }
 .groups { display: block; font-size: 18px; line-height: 30px; text-align: left; margin: 0px; }
 .info-btn {/* position: absolute; *//* right: -75px; *//* top: 70px; */width: 27px;height: 27px;border-radius: 50%;border: 3px solid white;display: flex;align-items: center;justify-content: center;}
@@ -61,9 +61,9 @@ top: 18px;
 
 right: -18%;
 
-top: 16px;
+top: 50%;
 
-transform: translateX(70%);
+transform: translate(70%,calc(-0% - 244px));
 
 display: flex;
 
@@ -75,8 +75,8 @@ justify-content: space-between;
   section {position: relative;transform: translateY(-5%);    padding: 75px 278px 0px 120px;}
 }
 @media (max-height: 720px) {
-  h2 { top: 50px; right: -20%; }
-  .output {bottom: -20px;right: -20%;}
+  h2 {/* top: 50px; *//* right: -20%; */}
+  .output {/* bottom: -20px; *//* right: -20%; */}
   .info-btn{
     /* top: 15px; */
   }
@@ -84,8 +84,8 @@ justify-content: space-between;
     /* top: 15px; */
   }
   .btns-logo{
-    right: -20%;
-    top: -35px;
+    /* right: -20%; */
+    /* top: -35px; */
   }
 }
 /* --- popup-- */
